--- a/index.html
+++ b/index.html
@@ -850,6 +850,38 @@
             </div>
         </div>
     </div>
+<!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section">
+                <div class="footer-logo">
+                    <h3>🏆 Tournament Creator Pro</h3>
+                    <p>Sistem Tournament Modern & Professional</p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="footer-bottom">
+            <div class="footer-credits">
+                <p>
+                    &copy; 2025 <strong>KB Tech</strong> - All Rights Reserved. 
+                    Made with <span class="heart">❤️</span> by 
+                    <a href="https://kbtech.id" target="_blank" class="creator-link">
+                        <span class="creator-highlight">KB Tech Development</span>
+                    </a>
+                </p>
+                <div class="footer-social">
+                    <a href="#" class="social-link">📘</a>
+                    <a href="#" class="social-link">📷</a>
+                    <a href="#" class="social-link">🐦</a>
+                    <a href="#" class="social-link">💼</a>
+                </div>
+            </div>
+            <div class="footer-tech">
+                <p>Built with HTML5, CSS3, JavaScript ES6+ | Version 2.0.1</p>
+            </div>
+        </div>
+    </footer>
 
     <script>
         let tournamentConfig = {
