--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
                 <p>
                     &copy; 2025 <strong>KB Tech</strong> - All Rights Reserved. 
                     Made with <span class="heart">❤️</span> by 
-                    <a href="https://kbtech.id" target="_blank" class="creator-link">
+                    <a href="https://kbtech.vercel.app" target="_blank" class="creator-link">
                         <span class="creator-highlight">KB Tech Development</span>
                     </a>
                 </p>
